<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".CreateQRcode">

    <EditText
        android:id="@+id/editTextClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/classQR"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject1"
        android:padding="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonGenerateQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/buttonDownloadQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_qr_code"
        android:layout_gravity="center"
        />

    <ImageView
        android:id="@+id/imageViewQRCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="16dp"
        android:scaleType="fitCenter" />

</LinearLayout>
